--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b82d023fb002c535a2f9ed6c8dd5256a",
+    "/css/app.css": "/css/app.css?id=436132937419938e6a957fc1b8eb332b"
 }
